feat: KBS SDK의 아키텍처를 단순화하여 과도한 최적화를 제거하고, 어노테이션 기반의 마스킹 시스템 도입
- Phase 1: 과도한 최적화 제거
- Phase 2: 어노테이션 기반 마스킹 시스템 구축
- Phase 3: 복잡한 Resilience 패턴 단순화
- Phase 4: 아키텍처 단순화
- Phase 5: 의존성 및 빌드 단순화
- Phase 6: 핵심 보안 기능 유지 및 검증